# enghub-rust-sample-webapp

./: .env  .gitignore  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: main.rs
common/error/: Cargo.toml
common/error/src/: lib.rs
context/app_context/: Cargo.toml
context/app_context/src/: lib.rs
context/mock_context/: Cargo.toml
context/mock_context/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs  user.rs  user_repository.rs
example/anyhow_example/: Cargo.toml
example/anyhow_example/src/: lib.rs
infra/db_schema/: Cargo.toml
infra/db_schema/migrations/2022-05-22-141451_create_users/: up.sql
infra/db_schema/src/: lib.rs  schema.rs
infra/grpc_handler/: Cargo.toml  build.rs
infra/grpc_handler/src/: convert.rs  lib.rs
infra/repository_impl/: Cargo.toml
infra/repository_impl/src/: lib.rs
proto/user/v1/: user.proto
usecase/: Cargo.toml
usecase/src/: create_user.rs  get_users_by_ids.rs  lib.rs
