[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

app_context = { path = "../context/app_context" }
grpc_handler = { path = "../infra/grpc_handler" }
repository_impl = { path = "../infra/repository_impl" }
