[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
derive-getters = "0.2.0"
mockall = "0.11.2"
uuid = { version = "1.0.0", features = ["v4"]}

error = { path = "../common/error" }

[dev-dependencies]
rstest = "0.13.0"
