[package]
name = "anyhow_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
typed-builder = "0.10.0"

domain = { path = "../../domain" }
error = { path = "../../common/error" }
