[package]
name = "grpc_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
derive-getters = "0.2.0"
derive-new = "0.5.9"

app_context = { path = "../../context/app_context" }
usecase = { path = "../../usecase" }

[build-dependencies]
tonic-build = "0.7"
