[package]
name = "repository_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
derive-new = "0.5.9"
diesel = { version = "1.4.4", features = ["postgres"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }

domain = { path = "../../domain" }
db_schema = { path = "../db_schema" }
